more alignment fixes.
are you  serious

--- a/resources/css/bem/wrapped.less
+++ b/resources/css/bem/wrapped.less
@@ -161,6 +161,10 @@
     }
   }
 
+  &__difficulty-badge {
+    height: var(--text-regular-size);
+  }
+
   &__header {
     position: relative;
     display: flex;
@@ -222,6 +226,10 @@
     display: flex;
     position: relative;
     margin-bottom: var(--gap-mid);
+
+    &--centred {
+      align-items: center;
+    }
   }
 
   &__list-item {
